--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Gerenciador Educacional On-Line</title>
+    <title>Gerenciador Educacional On-Line 2.0</title>
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/bootstrap.min.css')}}" media="screen">
   </head>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
