ajuste de menus e atualizacao do readme

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Gerenciador Educacional On-Line</title>
+  <title>Gerenciador Educacional On-Line 2.0</title>
   <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/bootstrap.min.css')}}" media="screen">
 </head>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -25,16 +25,16 @@
 <body class="body">
   <div class="container-lg" style="text-align: start;">
     <form style="padding: 100px;">
-      <h2 style="padding: 20px;">Gerenciador Educacional On-Line</h2> 
+      <h2 style="padding: 20px;">Gerenciador Educacional On-Line 2.0</h2> 
       
-      <h3 style="padding: 20px;">Sistema para auxílio de professores no plano de aula</h3>
+      <h3 style="padding: 20px;">Sistema para gerenciamento dos coordenadores</h3>
       
-      <h4 style="padding: 20px;">Com o objetivo de propiciar uma melhor gestão das atividades administrativas dos professores de uma escola pública do
-      Guarujá, este estudo realizou o desenvolvimento de um gerenciador educacional online. Foram pesquisadas as principais
-      necessidades dos professores em seu cotidiano escolar e como uma ferramenta digital poderia ajudá-los. Foram encontradas
-      as seguintes dificuldades, relatadas pelos entrevistados: ferramenta para gestão de notas e presenças, comunicação com
-      pais e alunos e cálculo automático de médias. Com base nisso foi desenvolvido um software com o framework web flask, com a linguagem python, e utilizando
-      banco de dados SQLite, que atende as necessidades relatadas e possibilita um melhor aproveitamento do tempo de aula.</h4>
+      <h4 style="padding: 20px;">Este site foi desenvolvido com o objetivo de auxiliar os administradores da escola a armazenar
+       e controlar informações a cerca das salas de aulas, alunos, frequências e notas.
+      <p>Essa é a segunda versão do projeto, aumentando o escopo da versão anterior, que focou nos professores como público alvo.</p>
+      <p>As ferramentas e recursos aqui desponibilizadas foram escolhidas a partir de pesquisa de campo com coordenadores e secretários 
+      de uma escola municipal do Guarujá-SP.</p>
+      <p>Foi utilizada linguagem Python, framework Flask, framework Bootstrap em Javascript e CSS, banco de dados com SQLite.</p></h4>
     </form>
   </div>
   <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='js/bootstrap.min.js')}}" media="screen">
