--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Gerenciador Educacional On-Line</title>
+    <title>Gerenciador Educacional On-Line 2.0</title>
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/bootstrap.min.css')}}" media="screen">
   </head>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -28,7 +28,7 @@
         <div class="col">
           <form action="" method="POST" style="padding: 100px;">
             {{form.csrf_token}}
-            <h3 style="text-align: center;min-width: 300px;margin-bottom: 20px;">Gerenciador Educacional On-Line</h3>
+            <h3 style="text-align: center;min-width: 300px;margin-bottom: 20px;">Gerenciador Educacional On-Line 2.0</h3>
             <div class="md-3">
               <label style="text-align: start;" for="exampleInputEmail1" class="form-label">Email</label>
               {{form.email(class="form-control",placeholder="email")}}
