--- a/app/templates/cadastro.html
+++ b/app/templates/cadastro.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Gerenciador Educacional On-Line</title>
+    <title>Gerenciador Educacional On-Line 2.0</title>
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/bootstrap.min.css')}}"
         media="screen">
 </head>
