--- a/app/templates/cadastro_aluno.html
+++ b/app/templates/cadastro_aluno.html
@@ -2,26 +2,37 @@
 <html>
 
 <head>
-    <title>Gerenciador Educacional On-Line</title>
+    <title>Gerenciador Educacional On-Line 2.0</title>
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/bootstrap.min.css')}}"
         media="screen">
 </head>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">G-E-O</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{{url_for('sistema')}}">Home</a>
-                </li>
-            </ul>
-        </div>
+      <a class="navbar-brand" href="#">G-E-O</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{url_for('cadastro_aluno')}}">Cadastro</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{url_for('consulta')}}">Consulta</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{{url_for('logout')}}">Logout</a>
+          </li>
+        </ul>
+        <form class="d-flex">
+        </form>
+      </div>
     </div>
-</nav>
+  </nav>
 <body class="body">
     <form action="" method="POST">
         {{form.csrf_token}}
