--- a/app/templates/consulta.html
+++ b/app/templates/consulta.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Gerenciador Educacional On-Line</title>
+  <title>Gerenciador Educacional On-Line 2.0</title>
   <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/bootstrap.min.css')}}" media="screen">
 </head>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -15,7 +15,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{{url_for('sistema')}}">Home</a>
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{url_for('cadastro_aluno')}}">Cadastro</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{url_for('consulta')}}">Consulta</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{url_for('logout')}}">Logout</a>
         </li>
       </ul>
       <form class="d-flex">
