--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,7 @@
 </head>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">G-E-O</a>
+    <a class="navbar-brand">G-E-O-2</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -27,7 +27,7 @@
     <form style="padding: 100px;">
       <h2 style="padding: 20px;">Gerenciador Educacional On-Line 2.0</h2> 
       
-      <h3 style="padding: 20px;">Sistema para gerenciamento dos coordenadores</h3>
+      <h3 style="padding: 20px;">Sistema para gerenciamento para coordenadores</h3>
       
       <h4 style="padding: 20px;">Este site foi desenvolvido com o objetivo de auxiliar os administradores da escola a armazenar
        e controlar informações a cerca das salas de aulas, alunos, frequências e notas.
