--- a/app/templates/coordenacao.html
+++ b/app/templates/coordenacao.html
@@ -24,34 +24,59 @@
   </div>
 </nav>
 <body>
+  <form style="padding: 10px;">
+    <h3 style="padding: 20px;">Área restrita aos coordenadores.</h2>
+    </form>
     <table style="margin: 50px;max-width: 900px;" class="table">
       <thead>
         <tr>
-          <th scope="col" style="max-width: 300px;">Professor</th>
-          <th scope="col" style="max-width: 70px;">Nº</th>
-          <th scope="col" style="max-width: 300px;">Nome completo do aluno</th>
-          <th scope="col" style="max-width: 70px;">Classe</th>
-          <th scope="col" style="max-width: 100px;">Matéria</th>
-          <th scope="col" style="max-width: 70px;">Nota</th>
-          <th scope="col" style="max-width: 70px;">Aulas</th>
-          <th scope="col" style="max-width: 70px;">Faltas</th>
+          <th scope="col" style="max-width: 300px;">Professores</th>
+          <th scope="col" style="max-width: 70px;"></th>
+        <!--  <th scope="col" style="max-width: 70px;"></th>-->
         </tr>
       </thead>
       <tbody>
-        {% for aluno in alunos %}
+        {% for professor in professores %}
           <tr>
-            <th scope="row" style="max-width: 300px;">{{ aluno.professor.nome }}</th>
-            <td style="max-width: 300px;">{{ aluno.numero }}</td>
-            <td style="max-width: 300px;">{{ aluno.nome }}</td>
-            <td style="max-width: 70px;">{{ aluno.classe }}</td>
-            <td style="max-width: 100px;">{{ aluno.materia }}</td>
-            <td style="max-width: 70px;">{{ aluno.nota }}</td>
-            <td style="max-width: 70px;">{{ aluno.qtd_aulas }}</td>
-            <td style="max-width: 70px;">{{ aluno.qtd_faltas }}</td>
+            <th scope="row" style="max-width: 300px;">{{ professor.nome }}</th>
+            <td><a class="btn btn-success" href="{{url_for('grafico', professor_id = professor['id'])}}" data-toggle="collapse" role="button" style="max-width: 70px;" aria-expanded="false">
+              Gráfico</a></td>
+          <!--  <td><a class="btn btn-outline-danger" href="{{url_for('delete2', professor_id = professor['id'])}}" 
+  role="button" style="max-width: 70px;">Deletar</a></td>-->
          </tr>
         {% endfor %}
       </tbody>
     </table>
+    <table style="margin: 50px;max-width: 900px;" class="table">
+    <thead>
+      <tr>
+        <th scope="col" style="max-width: 70px;">Nº</th>
+        <th scope="col" style="max-width: 300px;">Nome completo do aluno</th>
+        <th scope="col" style="max-width: 70px;">Classe</th>
+        <th scope="col" style="max-width: 100px;">Matéria</th>
+        <th scope="col" style="max-width: 70px;">Nota</th>
+        <th scope="col" style="max-width: 70px;">Aulas</th>
+        <th scope="col" style="max-width: 70px;">Faltas</th>
+        <th scope="col" style="max-width: 70px;"></th>
+        <th scope="col" style="max-width: 70px;"></th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for aluno in alunos %}
+        <tr>
+          <th scope="row" style="max-width: 70px;">{{ aluno.numero }}</th>
+          <td style="max-width: 300px;">{{ aluno.nome }}</td>
+          <td style="max-width: 70px;">{{ aluno.classe }}</td>
+          <td style="max-width: 100px;">{{ aluno.materia }}</td>
+          <td style="max-width: 70px;">{{ aluno.nota }}</td>
+          <td style="max-width: 70px;">{{ aluno.qtd_aulas }}</td>
+          <td style="max-width: 70px;">{{ aluno.qtd_faltas }}</td>
+          <td><a class="btn btn-outline-warning" href="{{url_for('update', aluno_id = aluno['id'])}}" role="button" style="max-width: 70px;">Editar</a></td>
+          <td><a class="btn btn-outline-danger" href="{{url_for('delete', aluno_id = aluno['id'])}}" role="button" style="max-width: 70px;">Deletar</a></td>
+        </tr>
+      {% endfor %}
+    </tbody>
+  </table>
   </body>
 <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='js/bootstrap.min.js')}}" media="screen">
 </html>
