--- a/app/templates/sistema.html
+++ b/app/templates/sistema.html
@@ -42,7 +42,7 @@
         <th scope="col" style="max-width: 100px;">Matéria</th>
         <th scope="col" style="max-width: 70px;">Nota</th>
         <th scope="col" style="max-width: 70px;">Aulas</th>
-        <th scope="col" style="max-width: 70px;">Faltas</th>
+        <th scope="col" style="max-width: 70px;">Faltassss</th>
         <th scope="col" style="max-width: 70px;"></th>
         <th scope="col" style="max-width: 70px;"></th>
       </tr>
