--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -38,7 +38,8 @@
       <p>Essa é a segunda versão do projeto, aumentando o escopo da versão anterior, que focou nos professores como público alvo.</p>
       <p>As ferramentas e recursos aqui desponibilizadas foram escolhidas a partir de pesquisa de campo com coordenadores e secretários 
       de uma escola municipal do Guarujá-SP.</p>
-      <p>Foi utilizada linguagem Python, framework Flask, framework Bootstrap em Javascript e CSS, banco de dados com SQLite.</p></h4>
+      <p>Foi utilizada linguagem Python, framework Flask, framework Bootstrap em Javascript e CSS, banco de dados com SQLite, 
+        API QuickChart para construir os gráficos, hospedado na nuvem e publicado via Heroku.</p></h4>
     </form>
   </div>
   <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='js/bootstrap.min.js')}}" media="screen">
