--- a/app/templates/cadastro_aluno.html
+++ b/app/templates/cadastro_aluno.html
@@ -1,11 +1,12 @@
 <!doctype html>
 <html>
 
-<head>
+  <head>
     <title>Gerenciador Educacional On-Line 2.0</title>
-    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/bootstrap.min.css')}}"
-        media="screen">
-</head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand">G-E-O-2</a>
@@ -33,19 +34,20 @@
       </div>
     </div>
   </nav>
-<body class="body">
+<body class="body"> 
     <form action="" method="POST">
         {{form.csrf_token}}
-        <table style="margin: 50px;max-width: 1200px;" class="table">
+        <div class="table-responsive w-auto">
+        <table style="margin: 50px;max-width: 1200px;" class="table" >
             <thead>
                 <tr>
-                    <th scope="col" style="max-width: 10px;">Número</th>
-                    <th scope="col" style="max-width: 150px;">Nome completo</th>
-                    <th scope="col" style="max-width: 20px;">Classe</th>
-                    <th scope="col" style="max-width: 30px;">Matéria</th>
-                    <th scope="col" style="max-width: 10px;">Nota</th>
-                    <th scope="col" style="max-width: 10px;">Aulas</th>
-                    <th scope="col" style="max-width: 10px;">Faltas</th>
+                    <th scope="col">Número</th>
+                    <th scope="col">Nome completo</th>
+                    <th scope="col">Classe</th>
+                    <th scope="col">Matéria</th>
+                    <th scope="col">Nota</th>
+                    <th scope="col">Aulas</th>
+                    <th scope="col">Faltas</th>
                 </tr>
             </thead>
             <tbody>
@@ -61,11 +63,13 @@
                 </tr>
             </tbody>
         </table>
+      </div>
         <div style="margin: 50px;max-width: 1200px;">
             <button style="min-width: 300px; margin-top: 20px;" type="submit"
                 class="btn btn-primary">Cadastrar</button>
         </div>
     </form>
+  
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='js/bootstrap.min.js')}}" media="screen">
 </body>
 
