--- a/app/templates/coordenacao.html
+++ b/app/templates/coordenacao.html
@@ -5,6 +5,7 @@
   <title>Gerenciador Educacional On-Line 2.0</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
@@ -28,26 +29,25 @@
   <form style="padding: 10px;">
     <h3 style="padding: 20px;">Área restrita aos coordenadores.</h2>
     </form>
-    <table style="margin: 50px;max-width: 900px;" class="table">
+    <div class="table-responsive">
+    <table style="margin: 10px;" class="table">
       <thead>
         <tr>
-          <th scope="col" style="max-width: 300px;">Professores</th>
-          <th scope="col" style="max-width: 70px;"></th>
-        <!--  <th scope="col" style="max-width: 70px;"></th>-->
+          <th scope="col">Professores</th>
+          <th scope="col"></th>
         </tr>
       </thead>
       <tbody>
         {% for professor in professores %}
           <tr>
             <th scope="row" style="max-width: 300px;">{{ professor.nome }}</th>
-            <td><a class="btn btn-success" href="{{url_for('grafico', professor_id = professor['id'])}}" data-toggle="collapse" role="button" style="max-width: 70px;" aria-expanded="false">
+            <td><a class="btn btn-success" href="{{url_for('grafico', professor_id = professor['id'])}}" data-toggle="collapse" role="button" aria-expanded="false">
               Análise</a></td>
-          <!--  <td><a class="btn btn-outline-danger" href="{{url_for('delete2', professor_id = professor['id'])}}" 
-  role="button" style="max-width: 70px;">Deletar</a></td>-->
          </tr>
         {% endfor %}
       </tbody>
     </table>
+  </div>
   </body>
 <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='js/bootstrap.min.js')}}" media="screen">
 </html>
