--- a/app/templates/grafico.html
+++ b/app/templates/grafico.html
@@ -5,6 +5,8 @@
   <title>Gerenciador Educacional On-Line 2.0</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous"></script>
+  <script src="extensions/resizable/bootstrap-table-resizable.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
@@ -28,6 +30,7 @@
   <form style="padding: 10px;">
     <h3 style="padding: 20px;">Área restrita aos coordenadores.</h2>
     </form>
+    <div class="table-responsive">
     <table style="margin: 50px;max-width: 900px;" class="table">
         <thead>
           <tr>
@@ -57,8 +60,9 @@
             </tr>
           {% endfor %}
         </tbody>
-      </table>  
-     <img id="image" src="{{url_grafico}}" alt="Grafico"/>  
+      </table>
+    </div>  
+     <img id="image" src="{{url_grafico}}" alt="Grafico" class="img-fluid"/>  
       <a class="btn btn-danger" href="{{url_for('coordenacao')}}" role="button" style="margin: 70px; max-width: 70px;">Voltar</a> 
    
 </body>
