--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -28,13 +28,13 @@
 </nav>
 
 <body class="body">
-  <div class="container-lg" style="text-align: start;">
-    <form style="padding: 100px;">
-      <h2 style="padding: 20px;">Gerenciador Educacional On-Line 2.0</h2> 
+  <div class="container-fluid" style="text-align: start;">
+    <form>
+      <h2>Gerenciador Educacional On-Line 2.0</h2> 
       
-      <h3 style="padding: 20px;">Sistema para gerenciamento para coordenadores</h3>
+      <h3>Sistema para gerenciamento para coordenadores</h3>
       
-      <h4 style="padding: 20px;">Este site foi desenvolvido com o objetivo de auxiliar os administradores da escola a armazenar
+      <h4>Este site foi desenvolvido com o objetivo de auxiliar os administradores da escola a armazenar
        e controlar informações a cerca das salas de aulas, alunos, frequências e notas.
       <p>Essa é a segunda versão do projeto, aumentando o escopo da versão anterior, que focou nos professores como público alvo.</p>
       <p>As ferramentas e recursos aqui desponibilizadas foram escolhidas a partir de pesquisa de campo com coordenadores e secretários 
