--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -39,6 +39,9 @@
               <label style="min-width: 300px; margin-top: 10px;text-align: start;" for="exampleInputPassword1" class="form-label">Senha</label>
               {{form.senha(class="form-control")}}
             </div>
+            {% if error %}
+             <p class=error><strong>Erro:</strong> {{ error }}
+             {% endif %}
             <button style="min-width: 300px; margin-top: 20px;margin-bottom: 10px;" type="submit" class="btn btn-primary">Login</button>
             <a style="min-width: 300px; margin-top: 5px;" class="link" href="{{url_for('cadastro')}}">Cadastrar-se</a>
           </form>
