--- a/app/templates/login3aluno.html
+++ b/app/templates/login3aluno.html
@@ -29,7 +29,7 @@
           <form action="" method="POST" style="padding: 100px;">
             {{form.csrf_token}}
             <h3 style="text-align: center;min-width: 100px;margin-bottom: 20px;">Gerenciador Educacional On-Line 2.0
-            <p><strong>PORTAL DO PROFESSOR</strong></p></h3>
+              <p><strong>PORTAL DO ALUNO</strong></p></h3>
             <div class="md-3">
               <label style="text-align: start;" for="exampleInputEmail1" class="form-label">Email</label>
               {{form.email(class="form-control",placeholder="email")}}
