--- a/app/templates/grafico.html
+++ b/app/templates/grafico.html
@@ -8,7 +8,7 @@
   <script src="extensions/resizable/bootstrap-table-resizable.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light"  style="background-color: #D9F9D7;">
   <div class="container-fluid">
     <a class="navbar-brand">G-E-O-2</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -18,7 +18,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="{{url_for('index')}}">Home</a>
+          <a class="nav-link" href="{{url_for('coordenacao')}}">Voltar</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{url_for('logout')}}">Logout</a>
         </li>
       </ul>
       <form class="d-flex">
