--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,7 +9,7 @@
 </head>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand">G-E-O-2</a>
+    <a class="navbar-brand" href="{{url_for('index')}}">G-E-O-2</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -17,13 +17,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{{url_for('login')}}">Portal Professor</a>
+          <a class="nav-link active" aria-current="page" href="{{url_for('login')}}" style="background-color: #e3f2fd;">Portal Professor</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{{url_for('login2coord')}}">Portal Coordenador</a>
+          <a class="nav-link active" aria-current="page" href="{{url_for('login2coord')}}" style="background-color: #D9F9D7;">Portal Coordenador</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="{{url_for('login3aluno')}}">Portal Aluno</a>
+          <a class="nav-link active" aria-current="page" href="{{url_for('login3aluno')}}" style="background-color: #F6D7F9;">Portal Aluno</a>
         </li>
       </ul>
     </div>
