--- a/app/templates/cadastro_aluno.html
+++ b/app/templates/cadastro_aluno.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;"">
     <div class="container-fluid">
       <a class="navbar-brand">G-E-O-3</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -48,6 +48,7 @@
                     <th scope="col">Nota</th>
                     <th scope="col">Aulas</th>
                     <th scope="col">Faltas</th>
+                    <th scope="col">Bimestre</th>
                 </tr>
             </thead>
             <tbody>
@@ -60,6 +61,7 @@
                     <td>{{form.nota(class="form-control")}}</td>
                     <td>{{form.aulas(class="form-control")}}</td>
                     <td>{{form.faltas(class="form-control")}}</td>
+                    <td>{{form.bimestre(class="form-control")}}</td>
                 </tr>
             </tbody>
         </table>
