--- a/app/templates/sistema_aluno.html
+++ b/app/templates/sistema_aluno.html
@@ -30,16 +30,19 @@
   <table style="margin: 50px;max-width: 900px;" class="table">
     <thead>
       <tr>
+        <th scope="col" style="max-width: 70px;">Bimestre</th>
         <th scope="col" style="max-width: 70px;">Classe</th>
         <th scope="col" style="max-width: 100px;">Matéria</th>
         <th scope="col" style="max-width: 70px;">Nota</th>
         <th scope="col" style="max-width: 70px;">Aulas</th>
         <th scope="col" style="max-width: 70px;">Faltas</th>
+
       </tr>
     </thead>
     <tbody>
       {% for aluno in alunos %}
         <tr>
+          <td style="max-width: 70px;">{{ aluno.bimestre }}</td>
           <td style="max-width: 70px;">{{ aluno.classe }}</td>
           <td style="max-width: 100px;">{{ aluno.materia }}</td>
           <td style="max-width: 70px;">{{ aluno.nota }}</td>
