--- a/app/templates/grafico.html
+++ b/app/templates/grafico.html
@@ -41,6 +41,7 @@
             <th scope="col" style="max-width: 300px;">Nome completo do aluno</th>
             <th scope="col" style="max-width: 70px;">Classe</th>
             <th scope="col" style="max-width: 100px;">Matéria</th>
+            <th scope="col" style="max-width: 100px;">Bimestre</th>
             <th scope="col" style="max-width: 70px;">Nota</th>
             <th scope="col" style="max-width: 70px;">Aulas</th>
             <th scope="col" style="max-width: 70px;">Faltas</th>
@@ -55,6 +56,7 @@
               <td style="max-width: 300px;">{{ aluno.nome }}</td>
               <td style="max-width: 70px;">{{ aluno.classe }}</td>
               <td style="max-width: 100px;">{{ aluno.materia }}</td>
+              <td style="max-width: 100px;">{{ aluno.bimestre }}</td>
               <td style="max-width: 70px;">{{ aluno.nota }}</td>
               <td style="max-width: 70px;">{{ aluno.qtd_aulas }}</td>
               <td style="max-width: 70px;">{{ aluno.qtd_faltas }}</td>
